--- a/gitma_introduction_notebook.ipynb
+++ b/gitma_introduction_notebook.ipynb
@@ -41,10 +41,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "51123159",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'gitma'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mgitma\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m Catma\n\u001b[0;32m      3\u001b[0m my_access_token \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124minsert your access token here\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[0;32m      4\u001b[0m my_catma \u001b[38;5;241m=\u001b[39m Catma(gitlab_access_token\u001b[38;5;241m=\u001b[39mmy_access_token)\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'gitma'"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "from gitma import Catma\n",
