delete demo project

--- a/gitma_introduction_notebook.ipynb
+++ b/gitma_introduction_notebook.ipynb
@@ -106,7 +106,7 @@
    "outputs": [],
    "source": [
     "\n",
-    "my_project_name = 'GitMA_Demo_Project' # Replace with the name of your project\n",
+    "my_project_name = 'Name of your CATMA project' # Replace with the name of your project\n",
     "\n",
     "my_catma.load_project_from_gitlab(\n",
     "    project_name=my_project_name, \n",
