--- a/gitma_introduction_notebook.ipynb
+++ b/gitma_introduction_notebook.ipynb
@@ -65,7 +65,7 @@
     "\n",
     "from gitma import Catma\n",
     "\n",
-    "my_access_token = 'insert your access token here'\n",
+    "my_access_token = 'insert your access token here' # Replace with your CATMA acess token\n",
     "my_catma = Catma(gitlab_access_token=my_access_token)"
    ]
   },
@@ -227,7 +227,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "my_annotation_collection = 'ac_2'"
+    "my_annotation_collection = 'name of your annotation collection' # Replace with the name of your annotation collection"
    ]
   },
   {
@@ -307,7 +307,7 @@
     "\n",
     "### 6.1 Set annotation collcections\n",
     "\n",
-    "First we need to specify the two annotation collections for wich the inter annotator agreement should be calculated. For this we first take a look at alle annotation collections in our project. \n"
+    "First we need to specify the two annotation collections for which the inter annotator agreement should be calculated. For this we first take a look at all annotation collections in our project. \n"
    ]
   },
   {
@@ -336,8 +336,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "annotation_collection_1 ='ac_1' # 'Name of the first collection'\n",
-    "annotation_collection_2 ='ac_2' # 'Name of the second collection'"
+    "annotation_collection_1 ='Name of the first collection' # Replace with the name of the first collection\n",
+    "annotation_collection_2 ='Name of the second collection' # Replace with the name of the second collection"
    ]
   },
   {
@@ -369,7 +369,7 @@
    "id": "cefbba6b",
    "metadata": {},
    "source": [
-    "The get_iaa method not only returns 3 different agreement scores, but also reports the number of annotation pairs considered when computing the IAA scores and the average overlap of the annotation pairs. Additionally, the method returns a confusion matrix to give an insight into the relation between the tags. "
+    "The `get_iaa` method not only returns 3 different agreement scores, but also reports the number of annotation pairs considered when computing the IAA scores and the average overlap of the annotation pairs. Additionally, the method returns a confusion matrix to give an insight into the relation between the tags. "
    ]
   },
   {
@@ -392,7 +392,7 @@
     "my_project.get_iaa(\n",
     "    ac1_name_or_inst=annotation_collection_1,\n",
     "    ac2_name_or_inst=annotation_collection_2,\n",
-    "    tag_filter=['stative_event'] # Put the tag names to include in the IAA calculation in this list\n",
+    "    tag_filter=['tag 1', 'tag 2'] # Put the tag names to include in the IAA calculation in this list\n",
     ")"
    ]
   },
@@ -403,7 +403,13 @@
    "source": [
     "### 6.4 Gamma Agreement\n",
     "\n",
-    "To compute the gamma agreement, in addition to the annotation collections, 5 further parameters have to be defined. The alpha, beta and delta_empty parameters are necessary to compute the CombinedCategoricalDissimilarity. The n_samples and the precision_level values are used in the `compute_gamma()` method."
+    "To compute the gamma agreement, in addition to the annotation collections, 5 further parameters have to be defined. The `alpha`, `beta` and `delta_empty` parameters are necessary to compute the CombinedCategoricalDissimilarity:\n",
+    "* `alpha`: weight for positional similarity (higher = stricter on span overlap)\n",
+    "* `beta`: weight for categorical similarity (higher = stricter on label match)\n",
+    "* `delta_empty`: penalty for missing annotations (higher = stronger penalty) \n",
+    "\n",
+    "\n",
+    "The n_samples and the precision_level values are used in the `compute_gamma()` method."
    ]
   },
   {
